# coingecko-discord-price-bot

./: .gitignore  Cargo.toml  README.md  Secrets-sample.toml
src/: main.rs
