[package]
name = "serenity-bot"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model"], version = "0.11.5" }
tokio = "1.28.1"
itertools = "0.10.0"
spl-token = "3.1.0"
currency_rs = "1.2.0"
anyhow = "1.0.71"
shuttle-runtime = "0.35.0"
shuttle-secrets = "0.35.0"
shuttle-serenity = "0.35.0"
tracing = "0.1.37"
chrono = { version = "0.4", features = ["serde"] }
coingecko = "1.0.0"

[features]
debug-logging = []
